other small UI updates

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
   <meta property="og:description"
     content="Discover exquisite craftsmanship, timeless elegance, and fashion-forward pieces that make a statement.">
   <meta property="og:image" content="/logo.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
